--- a/src/mern.css
+++ b/src/mern.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #0000;
 }
 .button-style {
@@ -36,4 +36,4 @@ h1 {
 }
 button a {
   text-decoration: none;
-}
+} */
