--- a/src/components/Logout.css
+++ b/src/components/Logout.css
@@ -4,7 +4,8 @@
   color: wheat;
 }
 .imgStyle {
-  width: 30px;
-  border-radius: 50%;
-  margin-bottom: 5px;
+  width: 42px;
+}
+li {
+  height: 30px;
 }
