--- a/src/components/Logout.css
+++ b/src/components/Logout.css
@@ -9,3 +9,14 @@
 li {
   height: 30px;
 }
+.dropdown {
+  width: "200px";
+  height: "40px";
+  margin-right: "10px";
+  background: "darkslategrey";
+  color: "wheat";
+  font-size: "20px";
+  border: "none";
+  margin-top: "3px";
+  display: none;
+}
