--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,10 +1,11 @@
-.container {
+.page-container {
   display: grid;
   place-items: center;
   width: 50%;
   background-color: white;
   border-radius: 50px;
   padding-bottom: 20px;
+  margin: auto;
 }
 
 form {
