--- a/src/components/Week7/Compressor.css
+++ b/src/components/Week7/Compressor.css
@@ -1,5 +1,4 @@
-/* Components/Compressor.css */
-.center {
+/* Components/Compressor.css .center {
   text-align: center !important;
 }
 .mainContainer {
@@ -150,4 +149,4 @@
     width: 100%;
     max-width: none;
   }
-}
+} */
