--- a/src/components/Week7/Resize.css
+++ b/src/components/Week7/Resize.css
@@ -1,6 +1,4 @@
-/* Imageresizer.css */
-
-.container {
+/* Imageresizer.css .container {
   text-align: center;
   margin-top: 50px;
   max-width: 600px;
@@ -105,4 +103,4 @@ input[type="range"] {
 
 .download-button:hover {
   background-color: #0056b3;
-}
+} */
